--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,513 @@
-.App {
-  text-align: center;
+:root {
+  --aqua: rgb(97 218 251);
+  --lightgray: #efefef;
+  --darkgray: #c9c9c9;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  margin: 0;
+  box-sizing: border-box;
+  background: #171717;
+  font-family: 'Cantarell', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.error-text {
+  font-size: 40px;
+  color: #efefef;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 auto;
+  width: 100px;
+}
+
+/*        NavBar        */
+
+.nav-box {
+  background-color: #101010;
+  height: 60px;
+  margin: 0 auto;
+}
+
+  .nav-content {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
   }
+
+  .nav-title {
+    color: var(--lightgray);
+    letter-spacing: 2px;
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: bold;
+    text-decoration: none;
+  }
+
+  /*.nav-logo {
+    width: 55px;
+    transition: 0.1s all ease-out;
+  }
+
+  .nav-logo:hover {
+    transform: scale(1.2) rotate(120deg);
+    cursor: pointer;
+  }*/
+
+    .nav-links {
+      display: flex;
+      transition: 0.1s all;
+    }
+
+      .nav-link {
+        /*width: 66px;*/
+        text-decoration: none;
+        color: var(--darkgray);
+        font-weight: 600;
+        transition: 0.1s all;
+        padding: 5px;
+        margin-left: 10px;
+        align-items: flex-end;
+        display: flex;
+        justify-content: center;
+        border-radius: 2px;
+        border-bottom: #101010 2px solid;
+        border-right: #101010 2px solid;
+        letter-spacing: 4px;
+      }
+
+        /*.icon {
+          opacity: 0;
+          font-size: 18px;
+          margin: 0 2px;
+          position: absolute;
+          transition: 0.05s all;
+        }*/
+
+      .nav-link:hover {
+        /*background: rgb(48, 48, 48);
+        box-shadow: 0px 0px 10px rgb(48, 48, 48);*/
+        border-bottom: #a8a8a8 2px solid;
+        border-right: #a8a8a8 2px solid;
+        
+      }
+
+      /*.nav-link:hover .icon {
+        display: block;
+        opacity: 1;
+        position: relative;
+      }*/
+
+/*    Homepage    */
+
+#wrapper {
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section-wrapper {
+  /*background-color: #101010;
+  padding: 10px;
+  border-radius: 4px;*/
+  margin: 40px 5px;
+}
+
+  .section-wrapper h2{
+    margin: 0 0 10px 0;
+    color: var(--lightgray);
+    letter-spacing: 2px;
+  }
+
+.loading-movie {
+  margin: 0 5px;
+  background-color: #101010;
+  min-width: 200px;
+  height: 300px;
+  border-radius: 5px;
+  animation: loading 0.5s infinite;
+}
+
+.movies-box {
+  overflow: hidden;
+  width: 100%;
+  /*box-shadow: inset 0px 0px 20px 0px #171717;*/
+}
+
+.inner-movies-box {
+  padding: 10px 0;
+  display: flex;
+  /*overflow: overlay;*/
+
+}
+
+  .movie {
+    margin: 0 5px;
+    position: relative;
+    transition: all 0.1s ease-in;
+  }
+
+    .movie:hover {
+      transform: scale(1.02);
+    }
+
+    .poster-img {
+      width: 200px;
+      /*border: 2px solid var(--lightgray);;*/
+      border-radius: 5px;
+      transition: all 0.1s ease-in;
+      /*position: relative;
+      z-index: -1;*/
+    }
+
+      .movie:hover>.poster-img {
+        /*border: 2px solid var(--aqua);*/
+        filter: brightness(30%);
+      }
+
+      .movie:hover>.movie-rating {
+        /*background: var(--aqua);*/
+        opacity: 100;
+      }
+
+    .movie-title {
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-decoration: none;
+      color: #efefef;
+      transition: all 0.05s ease-in;
+    }
+
+      .movie-title:hover {
+        color: #afafaf;
+      }
+
+    /*.movie-rating {
+      background: var(--lightgray);;
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding-right: 4px;
+      text-align: center;
+      border-radius: 2px;
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      transition: all 0.1s ease-in;
+    }*/
+
+    .hidden-text-box {
+      opacity: 0;
+      color: var(--lightgray);;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 140px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      transition: all 0.1s ease-in;
+    }
+
+      .movie:hover>.hidden-text-box {
+        /*background: var(--aqua);*/
+        opacity: 100;
+      }
+
+
+    .movie-rating {
+      color: var(--lightgray);;
+      display: flex;
+      align-items: center;
+    }
+
+    .movie-rating span {
+      font-size: 14px;
+    }
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  border-radius: 2px;
+}
+
+    /* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 2px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #777;
+  transition: 0.1s all ease-out;
+  border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/*      animations      */
+
+@keyframes loading{
+  0%{background-color: #101010;}
+  50%{background-color: #131313;}
+  100%{background-color: #101010;}
+  /*100%{transform:translateX(150%)}*/
+}
+
+/*        Moviepage       */
+
+.moviepage {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.backdrop-img {
+  width: 100%;
+  position: relative;
+  z-index: -1;
+}
+
+.moviepage-body-box {
+  box-shadow: #171717 0px 0px 50px 80px;
+  color: var(--lightgray);
+  display: flex;
+}
+
+.moviepage-body-left-column {
+  min-width: 260px;
+  position: sticky;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 15px;
+  top: 15px;
+  margin-top: -170px;
+  height: 100%;
+}
+
+.moviepage-body-left-column h3{
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 10;
+  margin-bottom: 0;
+}
+
+.moviepage-body-left-column p{
+  color: #7a7a7a;
+  font-size: 14px;
+  margin-top: 0;
+}
+
+
+.good-rating {
+  color: rgb(0, 117, 0);
+}
+
+.regular-rating {
+  color: rgb(211, 137, 0);
+}
+
+.bad-rating {
+  color: rgb(131, 0, 0);
+}
+
+.moviepage-body-right-column {
+  padding-left: 15px;
+  position: relative;
+  z-index: 10;
+  border-left: 1px solid var(--lightgray);
+  max-width: 709px;
+}
+
+.moviepage-poster {
+  width: 250px;
+  border-radius: 5px;
+  box-shadow: #171717 0px 0px 50px 25px;
+}
+
+.moviepage-title-box {
+  display: flex;
+  align-items: baseline;
+}
+
+.moviepage-title {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin: 0 10px 20px 0;
+}
+
+.moviepage-metadata {
+  font-weight: 100;
+  font-style: italic;
+  color: var(--darkgray);
+  margin-right: 10px;
+  min-width: 102px;
+}
+
+.moviepage-tagline {
+  text-align: right;
+  font-weight: 600;
+  text-transform: lowercase;
+  font-size: 18px;
+  margin-top: 10px;
+  font-style: italic;
+  font-weight: 100;
+  color: var(--darkgray);
+  position: relative;
+  z-index: 1;
+}
+
+.moviepage-overview {
+  color: var(--darkgray)
+}
+
+.moviepage-details {
+  margin: 60px 0;
+}
+
+.moviepage-detail-box {
+  display: flex;
+  padding: 10px 0;
+  /*border-bottom: 1px solid #747474;
+  border-top: 1px solid #747474;*/
+  justify-content: space-between;
+}
+
+.moviepage-detail-title {
+  margin: 0;
+  font-weight: bold;
+  color: var(--lightgray);
+  letter-spacing: 2px;
+}
+
+.moviepage-detail-content {
+  margin: 0;
+  text-transform: lowercase;
+  color: var(--darkgray);
+  text-align: right;
+}
+
+.people-box {
+  overflow: hidden;
+  /*box-shadow: inset 0px 0px 20px 0px #171717;*/
+  margin-bottom: 40px;
+  text-transform: lowercase;
+}
+
+.inner-people-box {
+  padding: 10px 0;
+  display: flex;
+  /*overflow: overlay;*/
+}
+
+.person {
+  margin: 0 5px;
+  border-radius: 5px;
+  min-width: 150px;
+  overflow: hidden;
+  max-height: 250px;
+  transition: 0.1s all ease-out;
+}
+
+  .person:hover {
+    transform: scale(1.02)
+  }
+
+.person img {
+  width: 150px;
+  min-height: 225px;
+}
+
+.personal-details1 {
+  position: relative;
+  background-color: #272727;
+  bottom: 12px;
+  height: 100%;
+  padding: 5px;
+  transition: 0.2s all ease-out;
+}
+
+.personal-details2 {
+  position: relative;
+  background-color: #272727;
+  bottom: 36px;
+  height: 100%;
+  padding: 5px;
+  transition: 0.2s all ease-out;
+}
+
+  .person:hover>.personal-details1,
+  .person:hover>.personal-details2 {
+    bottom: 188px;
+  }
+
+  .personal-details1 h4,
+  .personal-details2 h4 {
+    margin: 0;
+    color: var(--darkgray);
+  }
+
+  .personal-details1 p,
+  .personal-details2 p {
+    margin: 5px 0;
+    color: var(--darkgray);
+    font-size: 14px;
+    font-style: italic;
+  }
+
+/*        Footer        */
+
+.footer-box {
+  width: 1000px;
+  margin: 0 auto;
+  color: var(--lightgray);
+  box-shadow: #171717 0 0 20px 35px;
+  position: relative;
+  z-index: 200;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  letter-spacing: 2px;
+  padding: 25px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.footer-box h2 {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer-box h3 {
+  font-weight: 100;
+  font-size: 15px;
+  color: var(--darkgray);
+  margin: 35px 0;
+}
+
+.footer-box a {
+  font-weight: 100;
+  font-size: 15px;
+  color: var(--darkgray);
+  text-decoration: none;
+  transition: all 0.05s ease-out;
+}
+
+.footer-box a:hover {
+  color: #555;
 }
