--- a/src/App.css
+++ b/src/App.css
@@ -276,20 +276,19 @@ body {
 
     .poster-img {
       width: 200px;
-      /*border: 2px solid var(--lightgray);;*/
       border-radius: 5px;
       transition: all 0.1s ease-in;
-      /*position: relative;
-      z-index: -1;*/
     }
 
+      .loading-blur {
+        filter: blur(20px);
+      }
+
       .movie:hover>.poster-img {
-        /*border: 2px solid var(--aqua);*/
         filter: brightness(30%);
       }
 
       .movie:hover>.movie-rating {
-        /*background: var(--aqua);*/
         opacity: 100;
       }
 
@@ -317,7 +316,7 @@ body {
       bottom: 25px;
       
     }
-    
+
       .movie-button:hover {
         color: #171717;
 
@@ -613,7 +612,7 @@ body {
   border-radius: 5px;
   min-width: 150px;
   height: 225px;
-  overflow-y: hidden;
+  overflow: hidden;
   max-height: 250px;
   transition: 0.1s all ease-out;
   background-size: contain;
@@ -844,7 +843,6 @@ body {
 }
 
   .movies-grid img {
-    position: relative;
     width: 160px;
     border-radius: 5px;
     margin: 5px;
