--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body {
   height: 60px;
   margin: 0 auto;
   position: relative;
+  z-index: 100;
 }
 
   .nav-content {
@@ -337,21 +338,16 @@ body {
 .moviepage-body-box {
   box-shadow: #171717 0px 0px 50px 80px;
   color: var(--lightgray);
-  display: flex;
   position: relative;
   z-index: 10;
+  padding: 0 10px;
 }
 
 .moviepage-body-left-column {
-  min-width: 260px;
-  position: sticky;
   z-index: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  padding-right: 15px;
-  top: 15px;
-  margin-top: -170px;
+  align-items: center;
   height: 100%;
 }
 
@@ -360,9 +356,7 @@ body {
   z-index: 1;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  padding-right: 15px;
-  top: 15px;
+  align-items: center;
   height: 100%;
 }
 
@@ -428,10 +422,8 @@ body {
     }
 
 .moviepage-body-right-column {
-  padding-left: 15px;
   position: relative;
   z-index: 10;
-  border-left: 1px solid var(--lightgray);
   max-width: 709px;
   background: #171717;
 }
@@ -444,14 +436,15 @@ body {
 
 .moviepage-title-box {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
   margin: 20px 0;
 }
 
 .moviepage-title {
   text-transform: uppercase;
   letter-spacing: 2px;
-  margin: 0 10px 0 0;
 }
 
 .moviepage-metadata {
@@ -463,7 +456,7 @@ body {
 }
 
 .moviepage-tagline {
-  text-align: right;
+  text-align: center;
   font-weight: 600;
   text-transform: lowercase;
   font-size: 18px;
@@ -484,11 +477,7 @@ body {
 }
 
 .moviepage-detail-box {
-  display: flex;
   padding: 10px 0;
-  /*border-bottom: 1px solid #747474;
-  border-top: 1px solid #747474;*/
-  justify-content: space-between;
 }
 
 .moviepage-detail-title {
@@ -503,7 +492,7 @@ body {
   margin: 0;
   text-transform: lowercase;
   color: var(--darkgray);
-  text-align: right;
+  text-align: left;
 }
 
 .people-box {
@@ -522,10 +511,9 @@ body {
 .person {
   margin: 0 5px;
   border-radius: 5px;
-  min-width: 150px;
-  height: 225px;
+  min-width: 100px;
+  height: 150px;
   overflow: hidden;
-  max-height: 250px;
   transition: 0.1s all ease-out;
   background-size: contain;
   background-repeat: no-repeat;
@@ -556,9 +544,8 @@ body {
   position: absolute;
   background-color: #272727;
   padding: 5px;
-  width: 140px;
-  max-width: 140px;
-  /*top: 192px;*/
+  width: 90px;
+  max-width: 90px;
   bottom: 0;
   transition: 0.2s all ease;
 }
@@ -578,7 +565,7 @@ body {
     margin: 0;
     color: var(--darkgray);
     transition: 0.1s all;
-    font-size: 15px;
+    font-size: 10px;
     text-transform: uppercase;
     letter-spacing: 2px;
   }
@@ -610,15 +597,10 @@ body {
 /*      Personpage      */
 
 .personpage-box {
-  width: 100%;
   display: flex;
   flex-direction: column;
   margin-bottom: 60px;
-}
-
-.personal-data-box {
-  display: flex;
-  margin: 15px 0;
+  padding: 0 10px;
 }
 
   .personal-data-box img {
@@ -627,18 +609,23 @@ body {
   }
 
   .personpage-right-column {
-    margin-left: 20px;
     width: 100%;
   }
 
+    .job-titles {
+      font-size: 15px;
+    }
 
+  .personal-data-box {
+    margin: 15px 0;
+  }
 
   .personpage-left-column {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    text-align: right;
-    width: 300px;
+    align-items: center;
+    text-align: center;
+    /* width: 300px;*/
   }
 
     .personpage-left-column h2 {
@@ -672,6 +659,7 @@ body {
   justify-content: center;
   padding-bottom: 15px;
   border-bottom: 1px solid #555;
+  font-size: 14px;
 }
 
   .job-not-selected {
@@ -718,6 +706,7 @@ body {
 .movies-grid {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
   .movies-grid a {
@@ -725,15 +714,17 @@ body {
   }
 
   .movies-grid img {
-    width: 160px;
+    width: 90px;
+    max-height: 135px;
     border-radius: 5px;
     margin: 5px;
     transition: all 0.1s;
   }
 
   .null-poster-movie {
-    width: 160px;
-    height: 240px;
+    width: 90px;
+    height: 135px;
+    font-size: 10px;
     border-radius: 5px;
     margin: 5px;
     background: #363636;
@@ -763,6 +754,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin: 15px 0;
+    font-size: 14px;
   }
 
   .pages div {
@@ -778,6 +770,8 @@ body {
     letter-spacing: 2px;
     text-transform: uppercase;
     transition: 0.05s all;
+    display: flex;
+    align-items: center;
   }
 
     .switchpage-active:hover {
@@ -790,16 +784,22 @@ body {
     cursor: default;
     letter-spacing: 2px;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
   }
 
     .pagenumber-active {
-      color: #555;
-      margin: 16px 10px;
+      color: #a8a8a8;
+      margin: 16px 4px;
+      text-align: center;
+      width: 21px;
     }
 
     .pagenumber-inactive {
-      color: #a8a8a8;
-      margin: 16px 10px;
+      color: #555;
+      margin: 16px 4px;
+      text-align: center;
+      width: 21px;
     }
 
 /*        Footer        */
@@ -808,7 +808,6 @@ body {
   max-width: 1000px;
   margin: 0 auto;
   color: var(--lightgray);
-  box-shadow: #171717 0 0 20px 35px;
   position: relative;
   z-index: 200;
   display: flex;
@@ -866,6 +865,10 @@ body {
 
 
 @media (min-width: 768px) {
+
+/*        NAVBAR        */
+
+
 
 /*        HOMEPAGE        */
   
@@ -994,7 +997,114 @@ body {
   min-height: 567.5px;
 }
 
+.moviepage-body-box {
+  display: flex;
+  padding: 0;
+}
+
+.moviepage-body-left-column {
+  min-width: 260px;
+  position: sticky;
+  padding-right: 15px;
+  top: 15px;
+  margin-top: -170px;
+  align-items: flex-end;
+}
+
+.moviepage-body-right-column {
+  padding-left: 15px;
+  border-left: 1px solid var(--lightgray);
+}
+
+.moviepage-body-left-column-nobackdrop {
+  align-items: flex-end;
+  padding-right: 15px;
+  top: 15px;
+}
+
+.moviepage-title-box {
+  align-items: baseline;
+  flex-direction: row;
+  text-align: left;
+  margin: 20px 0;
+}
+
+.moviepage-title {
+  margin: 0 10px 0 0;
+}
+
+.moviepage-tagline {
+  text-align: right;
+}
+
+.moviepage-detail-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.moviepage-detail-content {
+  text-align: right;
+}
+
+.person {
+  min-width: 150px;
+  height: 225px;
+}
+
+.personal-details {
+  width: 140px;
+  max-width: 140px;
+}
+
+.personal-details h6 {
+  font-size: 15px;
+}
+
+/*        PERSONPAGE        */
+
+.personal-data-box {
+  display: flex;
+}
+
+.personpage-left-column {
+  align-items: flex-end;
+  text-align: right;
+  width: 300px;
+}
+
+.personpage-box {
+  width: 100%;
+  padding: 0;
+}
+
+.personpage-right-column {
+  margin-left: 20px;
+}
+
+.person {
+  font-size: 15px;
+}
+
+.movies-grid {
+  justify-content: left;
+}
+
+.movies-grid img {
+  width: 160px;
+  max-height: 240px;
+}
+
+.null-poster-movie {
+  width: 160px;
+  height: 240px;
+  font-size: 14px;
+}
+
 /*        FOOTER        */
+
+.footer-box {
+  box-shadow: #171717 0 0 20px 35px;
+}
 
 .footer-box h2 {
   font-size: 22px;
